--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
      <font color="#ffffff">
        <h1>Starry Night</h1>
-       <p>Imagine yourself projected in the night sky through the combination of animation and mirror. Hint: there's a surprise when mouse is pressed and released. Interact with the moving shapes by clicking and holding the mouse down, as well as move closer and further away from the camera.</p>
+       <p>Imagine yourself projected in the night sky through the combination of animation and mirror. Hint: there's a surprise when mouse is pressed and released. Interact with the moving shapes by clicking and holding the mouse down, as well as moving closer and further away from the camera.</p>
      </font>
        <div id="p5"></div>
 
